force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>pstar__Error_Details__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>