force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Source_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Source_Name__c</fullName>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>