force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>pstar__Source_System_Id__c</fullName>
    <label>Source System Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>