force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Source_Table__c.field-meta.xml
<CustomField>
    <fullName>pstar__Source_Table__c</fullName>
    <label>Source Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>