force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>pstar__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>