force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Status__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status__c</fullName>
    <label>Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>