force-app/main/default/objects/pstar__Error_Log__c/fields/pstar__Status_Code__c.field-meta.xml
<CustomField>
    <fullName>pstar__Status_Code__c</fullName>
    <label>Status Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>