force-app/main/default/objects/pstar__Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pstar__Error_Type__c</columns>
    <columns>pstar__Status__c</columns>
    <columns>pstar__Error_Details__c</columns>
    <columns>pstar__Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>